--- a/projects/JMESDKOpenWizCoder/nbproject/project.properties
+++ b/projects/JMESDKOpenWizCoder/nbproject/project.properties
@@ -1,3 +1,6 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
 application.title=MyGame
 application.vendor=MyCompany
 assets.jar.name=assets.jar
@@ -35,6 +38,8 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -59,9 +64,10 @@ jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=mygame.Main
+main.class=org.openwizcoder.OpenWizCoderStandAloneMain
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
