--- a/projects/JMESDKOpenWizCoder/nbproject/project.properties
+++ b/projects/JMESDKOpenWizCoder/nbproject/project.properties
@@ -64,7 +64,7 @@ jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=org.openwizcoder.OpenWizCoderStandAloneMain
+main.class=org.openwizcoder.OpenWizCoderMain
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
